# hyouka

./: .gitignore  Cargo.toml  build.rs  template.txt
.github/workflows/: release.yaml
src/: action.rs  config.rs  lib.rs  main.rs  options.rs  print.rs
