[package]
name = "hyouka"
version = "0.1.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "3.0.0-beta.2"
colored = "2.0.0"
dirs = "3.0.1"
log = "0.4.14"
regex = "1.4.5"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
simplelog = "0.10.0"
thiserror = "1.0.24"
toml = "0.5.8"
