[package]
name = "hyouka"
version = "0.1.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
colored = "2.0.0"
dirs = "3.0.2"
koyomi = "0.4.0"
once_cell = "1.8.0"
serde = { version = "1.0.125", features = ["derive"] }
toml = "0.5.8"

[build-dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
